tried to fix jumping nav
tried to fix jumping nav on case study page by just duplicating homepage but realised because of all the styling in bootstrap it won't look the same so decided to just have scroll spy bar instead, need to think about styling of it but maybe next time just focus on content.

--- a/css/about.css
+++ b/css/about.css
@@ -14,7 +14,7 @@ nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 35px 0 20px 0;
+    padding: 2.1875em 0 1.25em 0;
     display: none;
     
 }
@@ -27,7 +27,7 @@ nav {
 .logo, #primaryLogo {
     color: #25281F;
     font-family: 'Domine', 'Georgia', 'serif';
-    font-size: 36px;
+    font-size: 2.25rem;
     font-weight: 700;
 }
 
@@ -46,11 +46,11 @@ nav {
 .navigationIconsContainer {
     width: 100%;
     display: flex;
-    gap: 30px;
+    gap: 1.875em;
     justify-content: right;
    
-    margin-top: 33px;
-    margin-bottom: 33px;
+    margin-top: 2.0625em;
+    margin-bottom: 2.0625em;
     list-style-type: none;
 }
 
@@ -62,18 +62,18 @@ nav {
 .primaryNavigationContainer {
     width: 100%;
     display: flex;
-    gap: 60px;
+    gap: 3.75em;
     justify-content: left;
     
-    margin-top: 35px;
-    margin-bottom: 35px;
+    margin-top: 2.1875em;
+    margin-bottom: 2.1875em;
     list-style-type: none;
     padding: 0;
 }
 
 .primaryNavigationContainer a {
     text-decoration: none;
-    font-size: 24px;
+    font-size: 1.5rem;
     font-family: 'Heebo', 'Arial', 'Sans Serif';
     font-weight: 400;
     color: #25281F;
@@ -103,15 +103,15 @@ nav {
     background-repeat: no-repeat;
     background-size: cover;
     height: 450px;
-    margin-top: 30px;
+    margin-top: 1.875em;
 }
 
 .AboutMainContent {
     width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 65px;
-    padding: 65px 0 65px 0;
+    gap: 4em;
+    padding: 4em 0 4em 0;
 }
 
 .MainContentContainer {
@@ -119,7 +119,7 @@ nav {
     margin: 0 auto;
     background-color: #BBDDEC;
     max-width: 746px;
-    padding: 65px 0 65px 0;
+    padding: 4em 0 4em 0;
 }
 
 .aboutMeText {
@@ -131,7 +131,7 @@ nav {
     margin-top: 0px;
     color:#25281F;
     font-family: 'Domine', 'Georgia', 'serif';
-    font-size: 48px;
+    font-size: 3rem;
     font-weight: 700;
 
 }
@@ -139,7 +139,7 @@ nav {
 .aboutMeText p {
     margin-bottom: 0px;
     color:#25281F;
-    font-size: 16px;
+    font-size: 1rem;
     font-family: 'Heebo', 'Arial', 'Sans Serif';
     font-weight: 400;
 }
@@ -155,11 +155,11 @@ nav {
 
 .aboutPageButtonContainer button {
     font-family: 'Heebo', 'Arial', 'Sans Serif';
-    font-size: 24px;
+    font-size: 1.5rem;
     background-color: #F3B56C;
-    border: 0px;
+    border: 0;
     border-radius: 10px;
-    padding: 13px 28px;
+    padding: 0.5em 1.5em;
     transition: 02.s;
 }
 
@@ -173,13 +173,13 @@ footer {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 30px;
-    padding: 50px 0px 35px 0px;
+    gap: 1.875em;
+    padding: 3.125em 0 2.1875em 0;
 }
 
 .footerIconsContainer {
     display: flex;
-    gap: 30px;
+    gap: 1.875em;
     width: 100%;
     justify-content: center;
     text-decoration: none;
@@ -191,18 +191,18 @@ footer {
     display: flex;
     justify-content: center;
     font-family: 'Heebo', 'Arial', 'Sans Serif';
-    font-size: 12px;
+    font-size: 0.75rem;
     color: #25281F;
 }
 
 .copyrightTextContainer p {
-    margin: 0px;
+    margin: 0;
 }
 
 @media only screen and (max-width: 800px) {
     .aboutPageButtonContainer {
         flex-direction: column;
-        gap: 35px;
+        gap: 2.1875em;
     }
 }
 
@@ -215,7 +215,7 @@ footer {
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        gap: 30px;
+        gap: 1.875em;
         display: none;
     }
 
@@ -226,13 +226,13 @@ footer {
     .navigationIconsContainer {
         justify-content: center;
         padding: 0;
-        margin-top: 30px;
-        margin-bottom: 0px;
+        margin-top: 1.875em;
+        margin-bottom: 0;
     }
 
     .primaryNavigationContainer {
         flex-direction: column;
-        gap: 30px;
+        gap: 1.875em;
         align-items: center;
         margin: 0;
     }
