--- a/css/governmentCaseStudy.css
+++ b/css/governmentCaseStudy.css
@@ -12,7 +12,7 @@ nav {
     width: 100%; 
 }
 
-.header {
+.customHeader {
     width: 90%;
     margin: 0 auto;
     display: flex;
@@ -86,58 +86,6 @@ nav {
     cursor: not-allowed;
 }
 
-.primaryNavigationContainer a:hover {
-    font-weight:500;
-    cursor: pointer;
-}
-
-.hero {
-    display: flex;
-    margin: 0 auto;
-    width: 80%;
-    gap: 3.125em;
-    padding-top: 1.875em;
-    padding-bottom: 4em;
-}
-
-.heroImg {
-    width: 55%;
-    flex: 1 1 50%;
-    overflow: hidden;
-    position: relative;
-    
-}
-
-.heroImg img {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    max-width: 700px;    
-}
-
-.introContainer {
-    background-color: #F3B56C;
-    width: 45%;
-    max-width: 381px;
-    padding: 2.1875em;
-}
-
-.introText h1 {
-    margin-top: 0px;
-    color: #25281F;
-    font-family: 'Domine', 'Georgia', 'serif';
-    font-size: 3rem;
-    font-weight: 700;
-}
-
-.introText h3 {
-    margin-bottom: 0;
-    color:#25281F;
-    font-size: 1.75rem;
-    font-family: 'Heebo', 'Arial', 'Sans Serif';
-    font-weight: 400;
-}
 
 
 footer {
@@ -170,25 +118,10 @@ footer {
 }
 
 
-@media only screen and (max-width: 800px) {
-    .hero {
-     flex-direction: column-reverse;
-    }
-    
-     .heroImg {
-     width: 100%;
-     flex: none;
-     
-    }
-    .heroImg img {
-     position: static;
-     max-width: 100%;
-     transform: none;
-    }
-}
+
 
 @media only screen and (max-width: 800px) {
-    .header {
+    .customHeader {
         display: flex;
     }
 
