--- a/css/index.css
+++ b/css/index.css
@@ -18,7 +18,7 @@ nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 35px 0 20px 0;
+    padding: 2.1875em 0 1.25em 0;
     display: none;
     
 }
@@ -26,7 +26,7 @@ nav {
 .logo, #primaryLogo {
     color: #25281F;
     font-family: 'Domine', 'Georgia', 'serif';
-    font-size: 36px;
+    font-size: 2.25rem;
     font-weight: 700;
 }
 .ToggleIcon img {
@@ -45,11 +45,11 @@ nav {
 .navigationIconsContainer {
     width: 100%;
     display: flex;
-    gap: 30px;
+    gap: 1.875em;
     justify-content: right;
    
-    margin-top: 33px;
-    margin-bottom: 33px;
+    margin-top: 2.0625em;
+    margin-bottom: 2.0625em;
     list-style-type: none;
 }
 
@@ -61,18 +61,18 @@ nav {
 .primaryNavigationContainer {
     width: 100%;
     display: flex;
-    gap: 60px;
+    gap: 3.75em;
     justify-content: left;
     
-    margin-top: 35px;
-    margin-bottom: 35px;
+    margin-top: 2.1875em;
+    margin-bottom: 2.1875em;
     list-style-type: none;
     padding: 0;
 }
 
 .primaryNavigationContainer a {
     text-decoration: none;
-    font-size: 24px;
+    font-size: 1.5rem;
     font-family: 'Heebo', 'Arial', 'Sans Serif';
     font-weight: 400;
     color: #25281F;
@@ -86,8 +86,6 @@ nav {
     cursor: not-allowed;
 }
 
-
-
 .primaryNavigationContainer a:hover {
     font-weight:500;
     cursor: pointer;
@@ -99,10 +97,11 @@ nav {
     display: flex;
     margin: 0 auto;
     width: 80%;
-    gap: 50px;
-    padding-top: 30px;
-    padding-bottom: 65px;
+    gap: 3.125em;
+    padding-top: 1.875em;
+    padding-bottom: 4em;
 }
+
 .heroImg {
     width: 55%;
     flex: 1 1 50%;
@@ -116,35 +115,28 @@ nav {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    max-width: 700px;
-    /*bottom: 0;
-    min-width: 100%;
-    min-height: 100%;
-    /*max-width: 100%;
-    object-fit: cover;
-    so now image is right width but height is full size and sides not cropped*/
-    
+    max-width: 700px;    
 }
+
 .introContainer {
     background-color: #F3B56C;
     width: 45%;
     max-width: 381px;
-    padding: 35px;
-
+    padding: 2.1875em;
 }
 
 .introText h1 {
     margin-top: 0px;
     color: #25281F;
     font-family: 'Domine', 'Georgia', 'serif';
-    font-size: 48px;
+    font-size: 3rem;
     font-weight: 700;
 }
 
 .introText h3 {
-    margin-bottom: 0px;
+    margin-bottom: 0;
     color:#25281F;
-    font-size: 28px;
+    font-size: 1.75rem;
     font-family: 'Heebo', 'Arial', 'Sans Serif';
     font-weight: 400;
 }
@@ -152,16 +144,16 @@ nav {
 .projectsBackground {
     width: 100%;
     background-color: #BBDDEC;
-    padding: 65px 0px;
+    padding: 4em 0;
     display: flex;
     flex-direction: column;
-    gap: 55px;   
+    gap: 3.4376em;   
 }
 
 .singleProjectContainer {
     background-color: white;
     width: 90%;
-    padding: 55px 0px;
+    padding: 3.4376em 0px;
     margin: 0 auto;
     display: flex;
     max-width: 1130px;
@@ -171,7 +163,7 @@ nav {
     width: 88.8%;
     margin: 0 auto;
     display: flex;
-    gap: 50px;   
+    gap: 3.125em;   
 }
 
 .projectInfo {
@@ -188,12 +180,12 @@ nav {
 }
 
 .projectText h2 {
-font-size: 36px;
+font-size: 2.25rem;
 margin-top: 0;
 }
 
 .projectText h4 {
-    font-size: 24px;
+    font-size: 1.5rem;
 }
 
 .projectImg {
@@ -207,12 +199,12 @@ margin-top: 0;
 
  .projectButton button {
     font-family: 'Heebo', 'Arial', 'Sans Serif';
-    font-size: 24px;
+    font-size: 1.5rem;
     color: #25281F;
     background-color: #F3B56C;
-    border: 0px;
+    border: 0;
     border-radius: 10px;
-    padding: 13px 28px;
+    padding: 0.5em 1.5em;
     transition: 02.s;
 }
 
@@ -226,13 +218,13 @@ footer {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 30px;
-    padding: 50px 0px 35px 0px;
+    gap: 1.875em;
+    padding: 3.125em 0 2.1875em 0;
 }
 
 .footerIconsContainer {
     display: flex;
-    gap: 30px;
+    gap: 1.875em;
     width: 100%;
     justify-content: center;
     text-decoration: none;
@@ -242,12 +234,12 @@ footer {
     display: flex;
     justify-content: center;
     font-family: 'Heebo', 'Arial', 'Sans Serif';
-    font-size: 12px;
+    font-size: 0.75rem;
     color: #25281F;
 }
 
 .copyrightTextContainer p {
-    margin: 0px;
+    margin: 0;
 }
 
 
@@ -290,7 +282,7 @@ footer {
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        gap: 30px;
+        gap: 1.875em;
         display: none;
     }
 
@@ -301,13 +293,13 @@ footer {
     .navigationIconsContainer {
         justify-content: center;
         padding: 0;
-        margin-top: 30px;
-        margin-bottom: 0px;
+        margin-top: 1.875em;
+        margin-bottom: 0;
     }
 
     .primaryNavigationContainer {
         flex-direction: column;
-        gap: 30px;
+        gap: 1.875em;
         align-items: center;
         margin: 0;
     }
